# Msc15

./: .gitignore
Control/: commands  kinematic_joy_control.py  kinematic_joy_control_pic.py  ply_conversion.py  points.ply  points_output.txt  sim.sh
Msc/src/robot_control/: CMakeLists.txt  package.xml
Msc/src/robot_control/src/: follow_trajectory.cpp
